# libquantum

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
examples/: 00_blast_amplitude_check.py  01_blast_cwt_inverse.py  02_tone_amplitude_check.py  03_sweep_linear.py  04_sweep_chirp.py  04_sweep_chirp_00.py  05_using_libquantum_scales.py  06_sparse_representation.py  07_sparse_reconstruction.py  api_m_sweep_linear_synthetic.py  blast_amplitude_check_00.py  blast_derivative_integral.py  q-glide_overlap_01.py  q_glide_red_00.py  sweep_chirp_00.py  sweep_linear.py  tone_amplitude_check_00.py  using_scales_example.py
examples2/: chirp_gamma.py  chirp_sweep.py  chunked_samples.py  cyber_dyadic.py  dyadic_bands.py  fftw_check_00.py  fftw_check_01.py  iterative_stockwell.py  ukraine_rockets_01.py  ukraine_rockets_02_profile.py
examples_m1/: kei_blasts_load.py  tone_tests_00.py
examples_scipy/: explosions_plot_00.py  ims_cea_1hz_styx.py  ims_i59_1hz_tfr.py  s00_stft_tone_intro.py  s00_stft_tone_tests.py  s00_tone_fft_intro.py  s01_stft_tone_tests.py  s01_stft_tone_welch.py  s01_tone_fft_welch.py  s01_tone_welch_stft.py  s02_stft_tone_spect.py  s02_tone_stft_spect.py  s02_tone_stft_vs_spectrogram.py  s02_tone_tests.py  s03_stft_tone_spect_taper.py  s03_tone_spectrogram_variations.py  s03_tone_stft_taper.py  s04_stft_tone_spect_tests.py  s04_tone_stft_variations.py  s05_stft_quantum.py  s05_stft_tone_quantum.py  s05_tone_stft_quantum.py  s05_tone_stft_quantum_TOFIX_W_ALPHA.py  s06_tone_stft_atom_styx.py  s06_tone_stft_atom_styx_TO_FIX.py  s07_grain_styx.py  s07_grain_styx_cwt.py  s07_grain_tfr.py  s07_grain_tfr_TEMPLATE.py  s07beta_grain_tfr_GO.py  s08_blast_tfr.py  s10_gaussian_uncertainty.py  s12_tonga_kona_baro_17d.py  s14_double_double.py  s14_double_double_resample.py  s15_double_double_raw.py  (+15 more)
(+82 files in other folders)
