# See:
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "libquantum"
version = "1.5.14"
authors = [
    { name = "RedVox, Inc", email = "support@redvox.io" }
]
description = "Library for implementing standardized time-frequency representations."
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = { file = "LICENSE" }

dependencies = [
    "librosa==0.10.1",
    "libwwz==1.3.1",
    "matplotlib==3.7.1",
    "numpy==1.23.5",
    "pandas==2.0.1",
    "redvox==3.6.6",
]

[project.urls]
homepage = "https://github.com/RedVoxInc/libquantum"
PyPI = "https://pypi.org/project/libquantum/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["libquantum*"]
